--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ bind ^w send-prefix
 
 #-- base settings --#
 # What is the difference between screen-256 color and xterm-256color
-set -g default-terminal "screen"
+set -g default-terminal "screen-256color"
 # http://superuser.com/questions/424086/what-is-the-difference-between-screen-256-color-and-xterm-256color
 set -g escape-time 0 # Faster Command Sequences
 # http://unix.stackexchange.com/questions/23138/esc-key-causes-a-small-delay-in-terminal-due-to-its-alt-behavior
@@ -68,3 +68,5 @@ set -g status-style "bg=black"
 # Eat my big powerline!!!
 set-window-option -g window-status-format "#[fg=white, bg=red]#I #W #[fg=red, bg=black]"
 set-window-option -g window-status-current-format "#[fg=white, bg=blue] #I #W #[fg=blue, bg=black]"
+# hight
+set-window-option -g mode-style bg=black,fg=white
