--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ bind ^w send-prefix
 
 #-- base settings --#
 # What is the difference between screen-256 color and xterm-256color
-set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256"
 # http://superuser.com/questions/424086/what-is-the-difference-between-screen-256-color-and-xterm-256color
 set -g escape-time 0 # Faster Command Sequences
 # http://unix.stackexchange.com/questions/23138/esc-key-causes-a-small-delay-in-terminal-due-to-its-alt-behavior
