--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,8 @@ bind ^w send-prefix
 
 #-- base settings --#
 # What is the difference between screen-256 color and xterm-256color
-set -g default-terminal "screen-256"
+# set -g default-terminal "screen-256"
+set -ga terminal-overrides ",xterm-termite:Tc"
 # http://superuser.com/questions/424086/what-is-the-difference-between-screen-256-color-and-xterm-256color
 set -g escape-time 0 # Faster Command Sequences
 # http://unix.stackexchange.com/questions/23138/esc-key-causes-a-small-delay-in-terminal-due-to-its-alt-behavior
@@ -27,14 +28,14 @@ unbind %
 bind | split-window -h -c "#{pane_current_path}" # horizontal split (prefix |)
 # select
 bind h select-pane -L # left (prefix h)
-bind j select-pane -D # left (prefix h)
+bind j select-pane -D # down (prefix j)
 bind k select-pane -U # above (prefix k)
 bind l select-pane -R # right (prefix l)
 # resize
-bind -r ^k resize-pane -U 10 # upward (prefix Ctrl+k)
-bind -r ^j resize-pane -D 10 # downward (prefix Ctrl+j)
-bind -r ^h resize-pane -L 10 # to the left (prefix Ctrl+h)
-bind -r ^l resize-pane -R 10 # to the right (prefix Ctrl+l)
+# bind -r ^k resize-pane -U 10 # upward (prefix Ctrl+k)
+# bind -r ^j resize-pane -D 10 # downward (prefix Ctrl+j)
+# bind -r ^h resize-pane -L 10 # to the left (prefix Ctrl+h)
+# bind -r ^l resize-pane -R 10 # to the right (prefix Ctrl+l)
 # kill
 bind q killp  # kill pane (prefix q)
 
