--- a/config/termite/config
+++ b/config/termite/config
@@ -8,7 +8,7 @@ allow_bold = true
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = Hermit 11
+# font = Hermit 11
 scrollback_lines = 65536
 search_wrap = true
 icon_name = terminal
