--- a/i3/config
+++ b/i3/config
@@ -236,6 +236,9 @@ for_window [class="Timeset-gui"] floating enable border normal
 for_window [class="(?i)virtualbox"] floating enable border normal
 for_window [class="Xfburn"] floating enable
 for_window [class="electronic-wechat"] floating enable
+for_window [class="Thunderbird"] floating enable
+for_window [class="ss-qt5"] floating enable
+
 
 # switch to workspace with urgent window automatically
 for_window [urgent=latest] focus
