--- a/i3/config
+++ b/i3/config
@@ -190,11 +190,11 @@ bindsym $mod+Shift+7 move container to workspace $ws7; workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 
 # Open applications on specific workspaces
-assign [class="URxvt"] $ws1
-assign [class="(?i)xfce4-terminal"] $ws1
-assign [class="(?i)termite"] $ws1
-assign [class="(?i)google-chrome"] $ws2
-assign [class="(?i)Emacs"] $ws3
+#assign [class="URxvt"] $ws1
+#assign [class="(?i)xfce4-terminal"] $ws1
+#assign [class="(?i)termite"] $ws1
+#assign [class="(?i)google-chrome"] $ws2
+#assign [class="(?i)Emacs"] $ws3
 # assign [class="(?i)Chromium"] $ws2 
 # assign [class="(?i)gVim"] 3: Editor
 # assign [class="(?i)Steam"] 4: Media
