--- a/tmux.conf
+++ b/tmux.conf
@@ -42,18 +42,22 @@ bind q killp  # kill pane (prefix q)
 # copy mode
 setw -g mode-keys vi
 bind y copy-mode # enter copy mode (prefix y)
-bind -t vi-copy v begin-selection # select (v)
-bind -t vi-copy y copy-pipe "xsel -i -p -b" # copy (y)
+# bind -t vi-copy v begin-selection # select (v)
+# bind -t vi-copy y copy-pipe "xsel -i -p -b" # copy (y)
 bind p run "xsel -o | tmux load-buffer - ; tmux paste-buffer" # paste (p)
 set -g mouse on
 bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 # scroll like vim
-bind -t vi-copy f page-down
-bind -t vi-copy b page-up
-bind -t vi-copy d halfpage-down
-bind -t vi-copy u halfpage-up
+# bind -t vi-copy f page-down
+# bind -t vi-copy b page-up
+# bind -t vi-copy d halfpage-down
+# bind -t vi-copy u halfpage-up
 # https://wiki.archlinux.org/index.php/Tmux#X_clipboard_integration
+
+# zoom pane <-> window
+# bind z run "tmux-zoom"
+##
 
 # reload config (prefix r)
 bind r source-file ~/.tmux.conf \; display "Configuration reloaded!"
