--- a/i3/config
+++ b/i3/config
@@ -42,9 +42,6 @@ bindsym $mod+z exec --no-startup-id morc_menu
 ## sound-section - DO NOT EDIT if you wish to automatically upgrade Alsa -> Pulseaudio later! ##
 ################################################################################################
 
-exec --no-startup-id setxkbmap -option ctrl:nocaps
-exec --no-startup-id fcitx 
-exec --no-startup-id volumeicon
 bindsym $mod+Ctrl+m exec terminal -e 'alsamixer'
 #exec --no-startup-id pulseaudio
 #exec --no-startup-id pa-applet
@@ -145,16 +142,16 @@ bindsym $mod+Ctrl+Left workspace prev
 #                 set $ws2 2:
 #                 
 #                 
-#set $ws1 1:Term
-#set $ws2 2:Web
-#set $ws3 3:Editor
-#set $ws4 4:Media
-#set $ws5 5:Code
+# set $ws1 1:Term
+# set $ws2 2:Web
+# set $ws3 3:Editor
+# set $ws4 4:Media
+# set $ws5 5:Code
 set $ws1 1
 set $ws2 2
 set $ws3 3
 set $ws4 4
-set $ws5 5                 
+set $ws5 5 
 set $ws6 6
 set $ws7 7
 set $ws8 8
@@ -190,11 +187,11 @@ bindsym $mod+Shift+7 move container to workspace $ws7; workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 
 # Open applications on specific workspaces
-#assign [class="URxvt"] $ws1
-#assign [class="(?i)xfce4-terminal"] $ws1
-#assign [class="(?i)termite"] $ws1
-#assign [class="(?i)google-chrome"] $ws2
-#assign [class="(?i)Emacs"] $ws3
+# assign [class="URxvt"] $ws1
+# assign [class="(?i)xfce4-terminal"] $ws1
+# assign [class="(?i)termite"] $ws1
+# assign [class="(?i)google-chrome"] $ws2
+# assign [class="(?i)Emacs"] $ws3
 # assign [class="(?i)Chromium"] $ws2 
 # assign [class="(?i)gVim"] 3: Editor
 # assign [class="(?i)Steam"] 4: Media
@@ -237,7 +234,9 @@ for_window [class="(?i)virtualbox"] floating enable border normal
 for_window [class="Xfburn"] floating enable
 for_window [class="electronic-wechat"] floating enable
 for_window [class="Thunderbird"] floating enable
-for_window [class="ss-qt5"] floating enable
+# for_window [class="SS-qt5"] floating enable
+for_window [class="Slack"] floating enable
+for_window [class="copyq"] floating enable
 
 
 # switch to workspace with urgent window automatically
@@ -297,12 +296,19 @@ mode "resize" {
 bindsym $mod+9 exec --no-startup-id blurlock
 
 # Autostart applications
+exec_always --no-startup-id feh --bg-scale ~/dotfiles/wallpaper.png
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nitrogen --restore; sleep 1; compton -b
 exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
-exec --no-startup-id clipit
+# exec --no-startup-id clipit
+exec --no-startup-id setxkbmap -option ctrl:nocaps
+exec --no-startup-id fcitx 
+exec --no-startup-id volumeicon
+exec --no-startup-id copyq
+exec --no-startup-id LC_CTYPE=zh_CN.UTF-8 emacs -T "Emacs"
+
 # exec --no-startup-id blueman
 # exec_always --no-startup-id sbxkb
 exec --no-startup-id start_conky_maia
