--- a/config/termite/config
+++ b/config/termite/config
@@ -1,6 +1,6 @@
 # See `man termite.config`
 [options]
-scroll_on_output = false
+scroll_on_output = true
 scroll_on_keystroke = true
 audible_bell = false
 mouse_autohide = true
@@ -8,7 +8,7 @@ allow_bold = true
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-# font = Hermit 11
+font = Source Code Pro 10
 scrollback_lines = 65536
 search_wrap = true
 icon_name = terminal
@@ -37,10 +37,12 @@ word_chars = -A-Za-z0-9,./?%&#:_=+@~
 
 # Solarized-dark
 [colors]
-background= rgba(32,32,32,0.8)
+# background= rgba(32,32,32,0.8)
+background= rgba(63,63,63,0.8)
 foreground= #d0d0d0
 highlight = #505050
 cursor = #66ff66
+
 # colors from color0 to color254 can be set
 color0 = #073642
 color1 = #dc322f
