--- a/i3/config
+++ b/i3/config
@@ -235,7 +235,7 @@ for_window [class="Timeset-gui"] floating enable border normal
 for_window [class="(?i)virtualbox"] floating enable border normal
 for_window [class="Xfburn"] floating enable
 for_window [class="electronic-wechat"] floating enable
-for_window [class="Thunderbird"] floating enable
+for_window [class="Thunderbird"] floating enable border normal
 # for_window [class="SS-qt5"] floating enable
 for_window [class="Slack"] floating enable
 for_window [class="copyq"] floating enable
