--- a/i3/config
+++ b/i3/config
@@ -314,7 +314,8 @@ exec --no-startup-id LC_CTYPE=zh_CN.UTF-8 emacs -T "Emacs"
 exec --no-startup-id termite -e "tmux new -s work" 
 
 # exec xrandr --output DP1 --auto --rotate right 
-exec --no-startup-id xrandr --output HDMI1 --auto  --pos 0x0 --output DP1 --primary --pos 1920x30
+# exec --no-startup-id xrandr --output HDMI1 --auto  --pos 0x0 --output DP1 --primary --pos 1920x30
+exec --no-startup-id  xrandr  --output DP1 --primary --mode 1680x1050 --pos 0x0 --output HDMI1 --mode 1920x1080 --pos 1680x0 
 # exec --no-startup-id emacs -nw
 
 # 
