--- a/i3/config
+++ b/i3/config
@@ -21,7 +21,7 @@ bindsym $mod+n border normal
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font xft:Noto Sans 10
+font xft:URWGothic-Book 11
 
 # Use Mouse+$mod to drag floating windows
 floating_modifier $mod
@@ -42,6 +42,7 @@ bindsym $mod+z exec --no-startup-id morc_menu
 ## sound-section - DO NOT EDIT if you wish to automatically upgrade Alsa -> Pulseaudio later! ##
 ################################################################################################
 
+exec --no-startup-id volumeicon
 bindsym $mod+Ctrl+m exec terminal -e 'alsamixer'
 #exec --no-startup-id pulseaudio
 #exec --no-startup-id pa-applet
@@ -55,7 +56,6 @@ bindsym $mod+Ctrl+m exec terminal -e 'alsamixer'
 
 # Start Applications
 bindsym $mod+Ctrl+b exec terminal -e 'bmenu'
-# bindsym $mod+F2 exec palemoon
 bindsym $mod+F2 exec chromium
 bindsym $mod+F3 exec pcmanfm
 # bindsym $mod+F3 exec ranger
@@ -77,7 +77,6 @@ bindsym $mod+j focus left
 bindsym $mod+k focus down
 bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
-# bindsym $mod+odiaeresis focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -89,7 +88,7 @@ bindsym $mod+Right focus right
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
-bindsym $mod+Shift+odiaeresis move right
+bindsym $mod+Shift+semicolon move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -103,7 +102,7 @@ bindsym $mod+b workspace back_and_forth
 bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_and_forth
 
 # split orientation
-bindsym $mod+Ctrl+h split h;exec notify-send 'tile horizontally'
+bindsym $mod+h split h;exec notify-send 'tile horizontally'
 bindsym $mod+v split v;exec notify-send 'tile vertically'
 bindsym $mod+q split toggle
 
@@ -142,18 +141,11 @@ bindsym $mod+Ctrl+Left workspace prev
 # to display names or symbols instead of plain workspace numbers you can use
 # something like: set $ws1 1:mail
 #                 set $ws2 2:
-#                 
-#                 
-# set $ws1 1:Term
-# set $ws2 2:Web
-# set $ws3 3:Editor
-# set $ws4 4:Media
-# set $ws5 5:Code
 set $ws1 1
 set $ws2 2
 set $ws3 3
 set $ws4 4
-set $ws5 5 
+set $ws5 5
 set $ws6 6
 set $ws7 7
 set $ws8 8
@@ -189,19 +181,6 @@ bindsym $mod+Shift+7 move container to workspace $ws7; workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 
 # Open applications on specific workspaces
-# assign [class="URxvt"] $ws1
-# assign [class="(?i)xfce4-terminal"] $ws1
-# assign [class="(?i)termite"] $ws1
-# assign [class="(?i)google-chrome"] $ws2
-# assign [class="(?i)Emacs"] $ws3
-# assign [class="(?i)Chromium"] $ws2 
-# assign [class="(?i)gVim"] 3: Editor
-# assign [class="(?i)Steam"] 4: Media
-# assign [class="(?i)Pidgin"] 4: Media
-# assign [class="(?i)Hexchat"] 4: Media
-# assign [class="(?i)mplayer"] 4: Media
-# assign [class="(?i)Dota"] 4: Media
-# assign [class="(?i)crossover"] 5: Others
 # assign [class="Thunderbird"] $ws1
 # assign [class="Pale moon"] $ws2
 # assign [class="Pcmanfm"] $ws3
@@ -217,12 +196,13 @@ for_window [class="GParted"] floating enable border normal
 for_window [title="i3_help"] floating enable sticky enable border normal
 for_window [class="Lightdm-gtk-greeter-settings"] floating enable
 for_window [class="Lxappearance"] floating enable sticky enable border normal
+for_window [class="Manjaro-hello"] floating enable
 for_window [class="Manjaro Settings Manager"] floating enable border normal
-for_window [class="Manjaro Welcome"] floating enable
 for_window [title="MuseScore: Play Panel"] floating enable
 for_window [class="Nitrogen"] floating enable sticky enable border normal
 for_window [class="Oblogout"] fullscreen enable
 for_window [class="octopi"] floating enable
+for_window [title="About Pale Moon"] floating enable
 for_window [class="Pamac-manager"] floating enable
 for_window [class="Pavucontrol"] floating enable
 for_window [class="qt5ct"] floating enable sticky enable border normal
@@ -234,12 +214,8 @@ for_window [class="Thus"] floating enable border normal
 for_window [class="Timeset-gui"] floating enable border normal
 for_window [class="(?i)virtualbox"] floating enable border normal
 for_window [class="Xfburn"] floating enable
-for_window [class="electronic-wechat"] floating enable
 for_window [class="Thunderbird"] floating enable border normal
-# for_window [class="SS-qt5"] floating enable
 for_window [class="Slack"] floating enable
-for_window [class="copyq"] floating enable
-
 
 # switch to workspace with urgent window automatically
 for_window [urgent=latest] focus
@@ -281,7 +257,7 @@ mode "resize" {
         bindsym j resize shrink width 5 px or 5 ppt
         bindsym k resize grow height 5 px or 5 ppt
         bindsym l resize shrink height 5 px or 5 ppt
-        bindsym odiaeresis resize grow width 5 px or 5 ppt
+        bindsym semicolon resize grow width 5 px or 5 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -298,79 +274,103 @@ mode "resize" {
 bindsym $mod+9 exec --no-startup-id blurlock
 
 # Autostart applications
-exec_always --no-startup-id feh --bg-scale ~/dotfiles/double.jpg
+#
+#exec_always --no-startup-id feh --bg-scale ~/dotfiles/double.jpg
+exec --no-startup-id setxkbmap -option ctrl:nocaps
+exec --no-startup-id fcitx
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nitrogen --restore; sleep 1; compton -b
+exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
-# exec --no-startup-id clipit
-exec --no-startup-id setxkbmap -option ctrl:nocaps
-exec --no-startup-id fcitx 
-exec --no-startup-id volumeicon
-exec --no-startup-id copyq
-exec --no-startup-id LC_CTYPE=zh_CN.UTF-8 emacs -T "Emacs" 
-# exec --no-startup-id termite -e "emacs -nw"
-exec --no-startup-id termite -e "tmux new -s work" 
+exec --no-startup-id clipit
+exec --no-startup-id LC_CTYPE=zh_CN.UTF-8 emacs -T "Emacs"
+exec --no-startup-id termite -e "tmux new -s work"
+exec --no-startup-id  xrandr  --output DP1 --primary --mode 1680x1050 --pos 0x0 --output HDMI1 --mode 1920x1080 --pos 1680x0
 
-# exec xrandr --output DP1 --auto --rotate right 
-# exec --no-startup-id xrandr --output HDMI1 --auto  --pos 0x0 --output DP1 --primary --pos 1920x30
-exec --no-startup-id  xrandr  --output DP1 --primary --mode 1680x1050 --pos 0x0 --output HDMI1 --mode 1920x1080 --pos 1680x0 
-# exec --no-startup-id emacs -nw
 
-# 
-# bindsym $mod+Shift+c exec chromium
-# bindsym $mod+e exec emacs
-
-# exec --no-startup-id blueman
+# exec --no-startup-id blueman-applet
 # exec_always --no-startup-id sbxkb
 exec --no-startup-id start_conky_maia
 # exec --no-startup-id start_conky_green
-# 
-#exec --no-startup-id xautolock -time 30 -locker blurlock
-#
+exec --no-startup-id xautolock -time 10 -locker blurlock
+exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
+
+# Color palette used for the terminal ( ~/.Xresources file )
+# Colors are gathered based on the documentation:
+# https://i3wm.org/docs/userguide.html#xresources
+# Change the variable name at the place you want to match the color
+# of your terminal like this:
+# [example]
+# If you want your bar to have the same background color as your 
+# terminal background change the line 362 from:
+# background #14191D
+# to:
+# background $term_background
+# Same logic applied to everything else.
+set_from_resource $term_background background
+set_from_resource $term_foreground foreground
+set_from_resource $term_color0     color0
+set_from_resource $term_color1     color1
+set_from_resource $term_color2     color2
+set_from_resource $term_color3     color3
+set_from_resource $term_color4     color4
+set_from_resource $term_color5     color5
+set_from_resource $term_color6     color6
+set_from_resource $term_color7     color7
+set_from_resource $term_color8     color8
+set_from_resource $term_color9     color9
+set_from_resource $term_color10    color10
+set_from_resource $term_color11    color11
+set_from_resource $term_color12    color12
+set_from_resource $term_color13    color13
+set_from_resource $term_color14    color14
+set_from_resource $term_color15    color15
 
 # Start i3bar to display a workspace bar (plus the system information i3status if available)
 bar {
+	i3bar_command i3bar
 	status_command i3status
-	position top
-    mode hide
+	# status_command i3blocks
+	position bottom
 
 ## please set your primary output first. Example: 'xrandr --output eDP1 --primary'
-	tray_output primary
-	tray_output eDP1
+#	tray_output primary
+#	tray_output eDP1
 
 	bindsym button4 nop
 	bindsym button5 nop
-	font xft:Noto Sans 10.5
+#   font xft:URWGothic-Book 11
 	strip_workspace_numbers yes
 
-	colors {
-#	background $transparent
-		background #2B2C2B
+    colors {
+        background #283339
         statusline #F9FAF9
-		separator  #454947
+        separator  #454947
 
-		focused_workspace  #F9FAF9 #16A085 #2B2C2B
-		active_workspace   #595B5B #353836 #FDF6E3
-		inactive_workspace #595B5B #353836 #EEE8D5
-		urgent_workspace   #16A085 #FDF6E3 #E5201D
-	}
+#                      border  backgr. text
+        focused_workspace  #F9FAF9 #16a085 #292F34
+        active_workspace   #595B5B #353836 #FDF6E3
+        inactive_workspace #595B5B #283339 #EEE8D5
+        binding_mode       #16a085 #2C2C2C #F9FAF9
+        urgent_workspace   #16a085 #FDF6E3 #E5201D
+    }
 }
 
 # hide/unhide i3status bar
 bindsym $mod+m bar mode toggle
 
 # Theme colors
-# class                 border  backgr. text    indic.  child_border
-client.focused          #808280 #808280 #80FFF9 #FDF6E3
-client.focused_inactive #434745 #434745 #16A085 #454948
-client.unfocused        #434745 #434745 #16A085 #454948
-client.urgent           #CB4B16 #FDF6E3 #16A085 #268BD2
-client.placeholder      #000000 #0c0c0c #ffffff #000000 #0c0c0c
+# class                   border  backgr. text    indic.   child_border
+  client.focused          #556064 #556064 #80FFF9 #FDF6E3
+  client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
+  client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
+  client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
+  client.placeholder      #000000 #0c0c0c #ffffff #000000 
 
-client.background       #2B2C2B
+  client.background       #2B2C2B
 
 #############################
 ### settings for i3-gaps: ###
