--- a/i3/config
+++ b/i3/config
@@ -277,11 +277,11 @@ bindsym $mod+9 exec --no-startup-id blurlock
 #
 #exec_always --no-startup-id feh --bg-scale ~/dotfiles/double.jpg
 exec --no-startup-id setxkbmap -option ctrl:nocaps
-exec --no-startup-id fcitx
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nitrogen --restore; sleep 1; compton -b
-exec --no-startup-id manjaro-hello
+#exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
+exec --no-startup-id fcitx
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
 exec --no-startup-id clipit
