--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,7 @@ bind ^w send-prefix
 # What is the difference between screen-256 color and xterm-256color
 # set -g default-terminal "screen-256"
 set -ga terminal-overrides ",xterm-termite:Tc"
+set -g default-terminal "xterm-256"
 # http://superuser.com/questions/424086/what-is-the-difference-between-screen-256-color-and-xterm-256color
 set -g escape-time 0 # Faster Command Sequences
 # http://unix.stackexchange.com/questions/23138/esc-key-causes-a-small-delay-in-terminal-due-to-its-alt-behavior
