--- a/tmux.conf
+++ b/tmux.conf
@@ -40,11 +40,16 @@ bind l select-pane -R # right (prefix l)
 # kill
 bind q killp  # kill pane (prefix q)
 
+#pane movement
+
+# bind-key j command-prompt -p "join pane from:" "join-pane -s '%%'"
+bind-key s command-prompt -p "send pane to:" "join-pane -t '%%'" 
+
 # copy mode
 setw -g mode-keys vi
 bind y copy-mode # enter copy mode (prefix y)
-# bind -t vi-copy v begin-selection # select (v)
-# bind -t vi-copy y copy-pipe "xsel -i -p -b" # copy (y)
+#bind -t vi-copy v begin-selection # select (v)
+#bind -t vi-copy y copy-pipe "xsel -i -p -b" # copy (y)
 bind p run "xsel -o | tmux load-buffer - ; tmux paste-buffer" # paste (p)
 set -g mouse on
 bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
@@ -65,7 +70,7 @@ bind r source-file ~/.tmux.conf \; display "Configuration reloaded!"
 
 #-- statusbar --#
 set -g status on
-set -g status-interval 1
+set -g status-interval 0
 set -g status-keys vi
 set -g status-justify centre
 set -g status-left ""
