tmux lead key M-

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,8 +3,10 @@
 #-- bindkeys --#
 # prefix key (ctrl+w)
 unbind ^b
-set -g prefix ^w
-bind ^w send-prefix
+# set -g prefix ^w
+# bind ^w send-prefix
+set -g prefix M-`
+bind M-` send-prefix
 
 #-- base settings --#
 # What is the difference between screen-256 color and xterm-256color
