--- a/tmux.conf
+++ b/tmux.conf
@@ -50,9 +50,9 @@ bind-key s command-prompt -p "send pane to:" "join-pane -t '%%'"
 # copy mode
 setw -g mode-keys vi
 bind y copy-mode # enter copy mode (prefix y)
-#bind -t vi-copy v begin-selection # select (v)
-#bind -t vi-copy y copy-pipe "xsel -i -p -b" # copy (y)
-bind p run "xsel -o | tmux load-buffer - ; tmux paste-buffer" # paste (p)
+bind-key -T copy-mode-vi v send-keys -X begin-selection # select (v)
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i section clipboard" # copy (y)
+bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer" # paste (p)
 set -g mouse on
 bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
